--- a/Readme
+++ b/Readme
@@ -1,5 +1,6 @@
 ---Please Read me important-------
 First of all, welcome to my project and thank you for taking your time to look at this wonderful project.
+In this project you will be presented with a simple snake game.
 Ok!! Are you ready??? So let’s begin.
 ----Landing page---- – in this page you will find a navigator bar with 3 links. 
 1) link to sign up were you give your name and instrument you like 
